proofread the paper penultimate iteration

--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -11,9 +11,10 @@ To account for single-minded editors who have concentrated on only one or few ar
 \end{figure}
 
 We now discuss how the fitted parameters $\alpha^{*}$ and $\beta^{*}$ inform on the structures of collaboration in Wikipedia categories. On the one hand, we have found $\alpha^{*} \approx 0$ for all categories, reflecting the positive influence of the number of articles edited on editor expertise. This result is compatible with previous results by Keegan et al. \cite{keegan2012}. On the other hand, $\beta^{*}$ varies across categories with values ranging from $0$ to $1.52$ at the last snapshot. $\beta$ can be considered as a measure of the structure of collaboration: the smaller $\beta$ the more articles benefit from more editors. On the contrary, the larger $\beta$ the more articles benefit from less editors. 
-Consider the highest $\beta$ found, on category {\it Sexual acts}. Because this category could be considered taboo or perverse, articles are the least collaboratively edited. The high $beta > 1$ means that an editor with many edits will see her ranking drop. Indeed, it should not be taken for granted that contributions are necessarily positive. Wikipedia constantly faces a vast amount of vandalism and ``edit-warring", which often has a juvenile and lewd nature \cite{}. Because of their socially-sensitive nature, articles about sexual acts are particularly prone to attracting vandals or edit-warring behaviors. Therefore, editors making the most edits are not necessarily the ones improving article quality, as we would typically expect. This result is again compatible with previous research, which has shown that, in some circumstances, most active editors exhibit deleting behaviors that lower metric-based article quality ratings \cite{kane2011}. 
 
-Conversely, the category {\it Military History of the US} is famous for its self-organized task-forces. At the latest snapshot $\beta = 0$, and this is the only category we have analyzed, which exhibits $\beta$ consistently negative over time. Hence, the marginal quality of articles is positively influenced by the number of editors touching the article. Unsurprisingly, {\it Military History of the US} is literally a ``WikiProject" with a hierarchy of coordinators, an active IRC channel, and a mailing list. As a result of better coordination, there is less edit-warring and more efficient contributions: editors edit articles with well-defined task at hand. 
+Consider the highest $\beta$ found, on category {\it Sexual acts}. Because this category could be considered taboo or perverse, articles are the least collaboratively edited. The high $\beta > 1$ means that an editor with many edits will see her ranking drop. Indeed, it should not be taken for granted that contributions are necessarily positive. Wikipedia constantly faces a vast amount of vandalism and ``edit-warring", which often has a juvenile and lewd nature \cite{}. Because of their socially-sensitive nature, articles about sexual acts are particularly prone to attracting vandals or edit-warring behaviors. Therefore, editors making the most edits are not necessarily the ones improving article quality, as we would typically expect. This result is again compatible with previous research, which has shown that, in some circumstances, most active editors exhibit deleting behaviors that lower metric-based article quality ratings \cite{kane2011}. 
+
+Conversely, the category {\it Military History of the US} is famous for its self-organized task-forces. At the latest snapshot $\beta = 0$, and is the one of only a few categories we have analyzed, which exhibits $\beta$ consistently negative over time. Hence, the marginal quality of articles is positively influenced by the number of editors touching the article. Unsurprisingly, {\it Military History of the US} is literally a ``WikiProject" with a hierarchy of coordinators, an active IRC channel, and a mailing list. As a result of better coordination, there is less edit-warring and more efficient contributions: editors edit articles with well-defined task at hand. 
 
 
 %It requires a frictionless, collaborative environment where the more you edit, the more and more experienced you become. It's also worth noting that \cite{keegan2012}, found that ``coordination demands influence the tendency of editors with similar levels of experience to work together". \textcolor{red}{In our scenario that would mean that the coordination present attracts super-users to work in the productive environment. The category Military History is empirically a standout case of collaboration, and shows in its calibrated $\beta$ measurements. }
