--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -1,13 +1,14 @@
 \section{Related Work}
-The structure and dynamics of individual and collective contributions have since long been recognized by researchers as primary factors for the achievement of high quality content, starting with scientific publications \cite{newman2001} and open collaboration projects \cite{bryant2005}. In the meantime, some of these open collaboration projects have tremendously increased their size and the number of their contributors, making it hard to assess the value of each knowledge artifact, even by intensive peer-review. Wikipedia, the iconic success story of open collaboration, has faced such a challenge of assessing the quality of its articles and the expertise of editors. While a lot of peer-review is performed by editors and administrators, the quantity of articles makes it hard to control all content, and keep it continuously up-to-date. A variety of {\it bots} patrol Wikipedia to prevent undesired changes (vandalism), which could undermine the reputation of the collaborative encyclopedia \cite{}. Similarly, the idea of bots to patrol the quality of articles has emerged, with various methods based on word count \cite{blumenstock2008sizematters}, the general structure of articles \cite{wang2013tell}, the revision history \cite{hu2007articlequality}, the patterns of changes between article versions \cite{woehner2009}, or a combination of types, volume of edits and editor expertise \cite{kane2011}. Editor expertise has also been investigated by considering the total number of words, the number of edits made, or the longevity of edits \cite{adler2008measuringauthor}, as well as time spent making edit sessions \cite{geiger2013}, or even the number of barnstars collected \cite{Kriplean2008}. More specific features of editors received the attention of researchers, such as creative editing \cite{iba2010}, how power editors differ from normal editors \cite{panciera2009}, and the influence of the type of contributors on the quality of articles \cite{stein2007}.
+The structure and dynamics of individual and collective contributions have since long been recognized by researchers as primary factors for the achievement of high quality content, starting with scientific publications \cite{newman2001} and open collaboration projects \cite{bryant2005}. In the meantime, some of these open collaboration projects have tremendously increased their size and the number of their contributors, making it hard to assess the value of each knowledge artifact, even by intensive peer-review. Wikipedia, the iconic success story of open collaboration, has tried to find ways to determine it's own editor and article quality, which always faced criticism. Since 2005 many quality article metrics have been proposed from methods based on word count \cite{blumenstock2008sizematters}, the general structure of articles \cite{wang2013tell}, the revision history \cite{hu2007articlequality}, the patterns of changes between article versions \cite{woehner2009}, and combinations of type and volume of edits and editor expertise \cite{kane2011}. Editor expertise has also been investigated by considering the total number of words edited, the number of edits made, or the longevity of edits \cite{adler2008measuringauthor}, as well as time spent making edit sessions \cite{geiger2013}, or even the number of barnstars collected \cite{Kriplean2008}. More specific features of editors received the attention of researchers, such as creative editing \cite{iba2010}, how power editors differ from normal editors \cite{panciera2009}, and the influence of the type of contributors on the quality of articles \cite{stein2007}.
 
 The effort to measure article quality and editor expertise has extended to predicting the quality of contributions \cite{druck2008learning,zeng2006computingtrust}, developing reputation systems for editors \cite{adler2007contentdriven}, and identifying editor candidates for promotion \cite{burke2008taking}.
 
-Interestingly, the difficulty to assess the quality of artifacts and the expertise of editors contrasts sharply with the ease to make the same evaluation with software code. In a Matlab experiment for solving NP-hard problems, it was found that work shared as a public good helps individuals quickly reuse existing results, and thus, find better algorithms \cite{gulley2010}. Source code submissions by individuals programmers were tested and benchmarked for their capacity to solve the assigned problem quickly, by executing the compiled code on a computer. Unfortunately, for the time being, this approach is exclusively feasible for machine executable knowledge (i.e. software code) and in highly controlled environments.
+\textcolor{red}{I think we can delete this paragraph, its off topic.}
+In contrast, the difficulty to assess the quality of artifacts and the expertise of editors differs with the ease to make the same evaluation with software code which can be compiled and tested. In a Matlab experiment for solving NP-hard problems, it was found that work shared as a public good helps individuals quickly reuse existing results, and thus, find better algorithms \cite{gulley2010}. Source code submissions by individuals programmers were tested and benchmarked for their capacity to solve the assigned problem quickly, by executing the compiled code on a computer. Unfortunately, for the time being, this approach is exclusively feasible for machine executable knowledge (i.e. software code) and in highly controlled environments.
 
 Another complication of open collaboration, and presumably its main value-added, is the coordination between contributors, and how it helps generate value through through peer-review \cite{hu2007articlequality,wilkinson2007}, implicit and explicit coordination \cite{kittur2008}, quantity and span of contributions regarding local and global networks\cite{arazy2010determinants}. Similarly, the position of articles within local and global networks of Wikipedia is significantly related to article quality \cite{kane2009}. It was also found that editors clustered by interest with higher coordinated efforts in densely populated clusters \cite{jesus2009}.  The effects of diversity on group productivity seem to increase group productivity \cite{chen2010}.
 
-While collaboration and additional review by peers is generally perceived as positive, depending on the type of tasks and their required coordination, performance can be also be undermined by inadequate coordination \cite{kittur2009coordination}.  It has also been found that prior experience and article attribute influence the quality of collaboration \cite{keegan2012}. 
+While collaboration and additional review by peers is generally perceived as positive, depending on the type of tasks and their required coordination, performance can be also be undermined by inadequate coordination \cite{kittur2009coordination}. \textcolor{red}{This last sentence has no point.} It has also been found that prior experience and article attributes influence the quality of collaboration \cite{keegan2012}. 
 
 %Network characteristics and the value of collaborative user-generated content \cite{ransbotham2012network}  $\rightarrow$ considers only that information flows from one article to another through contributors. In this network approach, editors are ``mediators" of concepts.
 
