--- a/paper/sections/data.tex
+++ b/paper/sections/data.tex
@@ -2,7 +2,7 @@
 We seek to calibrate the bi-partite random walker model, and thus find the strongest signal on the collaborative structure of open collaboration. For that, we have to find values of $\alpha$ and $\beta$, which minimize the distance between rankings given by the model and some ground-truth metrics on editor expertise and article quality, obtained independently from the input matrix. We perform the model calibration for 13 snapshots (see Figure \ref{fig:snapshots})  for each of  the 12 categories of Wikipedia articles presented in Table \nolinebreak \ref{tab:statistics}. We have selected a spectrum of categories ranging from anarchy and edit-warring (e.g., {\it Sexual Acts}) to acknowledged high organization level (e.g., {\it Military history of the US})
 
 
-For each category and snapshot, we build the binary matrix $M_{ea}$ by parsing all edit histories of all articles up to the snapshot time. We set $M_{ea} = 1$ for editor $e$ having modified article $a$, and $M_{ea} = 0$ otherwise. In order to eliminate page vandals, we considered only editors who made 5 or more edits to any article in the category. Even though they contribute greatly to the emergence of quality in Wikipedia \cite{}, we have not considered the discussion pages associated to each article. We also discarded all software robots (i.e. {\it bots}) that programmatically edit Wikipedia. 
+For each category and snapshot, we build the binary matrix $M_{ea}$ by parsing all edit histories of all articles in the main namespace up to the snapshot time. We set $M_{ea} = 1$ for editor $e$ having modified article $a$, and $M_{ea} = 0$ otherwise. In order to eliminate page vandals, we considered only editors who made 5 or more edits to any article in the category. We also discarded all software robots (i.e. {\it bots}) that programmatically edit Wikipedia. 
 
 \begin{table}
 \begin{tabular}{|l|c|c|c|}
@@ -53,9 +53,9 @@ The set $(\alpha^*,\beta^*)$ characterizes how the structure of collaboration cr
 A variety of techniques for measuring article quality have been proposed, from a collection of word-count related metrics \cite{blumenstock2008sizematters} to analyzing persistent and transient contributions throughout revisions\cite{woehner2009}. We have selected metrics used on Wikipedia \cite{wang2013tell,klein}, which have also been used in the CSCW literature in different combinations \cite{kane2011} \cite{keegan2012}. Our measure of actual article quality is performed through a combination of 5 text analysis metrics: (i) ratio of mark-up to readable text, (ii) number of headings, (iii) article length, (iv) citations per article length, (v) number of outgoing intra-Wiki links. We performed principal component analysis (PCA) for each category and snapshot in order to reduce dimensionality from 5 metrics to a single one (i.e. the principal component). The variance explained by the principal component varied between 0.5 and 0.72, confirming the dominance of the axis of maximum variance. Even though these five article quality metrics do not directly incorporate information from the bi-partite network (e.g. number of contributors, number of edits), they might indirectly be related, as some contributors specialize in some types of editing, such as adding citations or systematically improving the structure of articles \cite{}.
 
 Editor expertise is even more difficult to address, as each article is a blend of the edits of several contributors, and disentangling remains a challenge, which has occupied Wikipedia researchers long before us, using techniques ranging from parsing the revision history to measuring text survival rate \cite{adler2008measuringauthor}. Although they are sophisticated, these metrics pose a variety of problems. For instance, some articles are likely to evolve not only because former editors introduced wrong statements, but simply because of new information brought to public attention. We decided to use ``labor hours" proposed by Geiger and Halfaker \cite{geiger2013}, which is calculated for each editor by taking contribution history up to the snapshot point. All edits made within $1$ hour of a previous edit are counted in an {\it edit session}. If more than one hour separates two edits, a new period of edits  starts. 
- The expertise expressed in labor hours is the sum of edit sessions. For the calculation of ground-truth expertise, we only consider edits for a given category, although the same editor might have edited other categories of articles in Wikipedia. The labor hours doesn't incorporate only the time effort spent by  editors on a Wikipedia category. It does not tell how this time is spent in the number (resp. size) of edits actually made during a period, or whether the effort has been spent on one or multiple articles. In other words, we cannot distinguish a single minded user spending $100$ hours on a single article trying to get it to ``Feature Article status" from a user making $100$ stub articles for $1$ hour each.  However, it is clear that a highly contributing editor has more chance to touch more articles over time, but the metric does not if some editors have rather edited the same articles. How this effort is distributed and brings quality is precisely what the {\it bi-partite random walker} model can say that other metrics cannot.  In a nutshell, parameters $\alpha$ and $\beta$ describe the most likely structure of collaboration given calibration of the model to ground-truth quality and expertise metrics. The higher the correlation between the model and the exogenous metrics, the better the collaboration structure is captured by the model. 
+ The expertise expressed in labor hours is the sum of edit sessions. For the calculation of ground-truth expertise, we only consider edits for a given category, although the same editor might have edited other categories of articles in Wikipedia. It purposefully does not tell how this time is spent in the number (resp. size) of edits actually made during a period, or whether the effort has been spent on one or multiple articles. In other words, we cannot distinguish a single minded user spending $100$ hours on a single article trying to get it to ``Feature Article status" from a user making $100$ stub articles for $1$ hour each.  However, it is clear that a highly contributing editor has more chance to touch more articles over time, but the metric does not distinguish if some editors rather to edited the same articles. How this effort is distributed and brings quality is precisely what the {\it bi-partite random walker} model can say that other metrics cannot. In a nutshell, parameters $\alpha$ and $\beta$ describe the most likely structure of collaboration given calibration of the model to ground-truth quality and expertise metrics. The higher the correlation between the model and the exogenous metrics, the better the collaboration structure is captured by the model. 
 
-Finally, we shall discuss shortly the possibility that ground-truth article quality and editor expertise might be dependent. Again, it depends on the collaboration structure. In the extreme case where each article is produced by an editor, then the bi-partite random walker model collapses into a 1-dimensional problem, as well as the notion of collaboration. On the contrary, if all editors contribute to all articles, both editors and articles will all be equally ranked and the algorithm will not converge. A realistic solution lies in-between and is best captured by $\beta$.
+Finally, we shall discuss shortly the possibility that ground-truth article quality and editor expertise might be dependent. That would mean that some a factor would make editor and article quality tied to each other. For instance if one category was just much easier to write about and the average editor was simply better at writing about it. Well in fact these are the criticisms of the biases of Wikipedia, that it has a very specific male, global north, young, technological demographic. That is why we attempted to mix categories which would play into this systemic bias (like Computability and Economic theory), with those that would be neglected by such bias (like Feminist Writers and Yoga). Clearly this is a stereotypical approach, but at least we will be able to view some variance. 
 
 % \textcolor{red}{Yet depending on our amount of preferential attachment in our network, one or the other could be seen as a superior editor. Likewise on pages, an article text can be changed in 5 ways. The same edits could be made by one generalist editor or 5 specialist editors, and the ground-truth would not change. Depending on a different preferential attachment parameter in the model could rank each of these very differently.}
 %
