--- a/paper/sections/method.tex
+++ b/paper/sections/method.tex
@@ -1,10 +1,13 @@
 \section{Method}
 \label{method}
+\textcolor{red}{delete this first paragraph or move it to the related work section, because it not about our method}
 \textcolor{red}{Measuring the structure of value creation by individuals is nearly impossible in most in open collaboration projects.} In particular, when projects do not involve writing software code, they can hardly be compiled, executed and tested on computers. As exemplified in Wikipedia, the most common way to code knowledge is natural language (e.g. Chinese, English, Spanish, French, German), which can hardly be systematically tested for performance. Natural language is indeed the realm of subjective interpretation by humans. 
 
-Here, we present a method to model \textcolor{red}{(measure?)} value creation and performance in such environments. This method neither relies on the content or on subjective metrics, such as the number of edits, nor on the number of bytes changed overall or per edit. We recognize that value can be brought by each editor, regardless of the frequency, or the length of her contributions \cite{}. Only the number and the expertise of editors bring value to an article \cite{wilkinson2007}.  And the expertise of editors can be measured from the number and the quality of articles they have modified at least once.
+Here, we present a method to model \textcolor{red}{(measure?)} value creation and performance in such environments.\textcolor{red}{Try: Here we present a model to characterize ``collaborativeness'' in open collaboration environments.}\textcolor{red}{What a horrible thing to say in the next paragraph, you only need to say, we compare two models and find the parameters that make them correlate best} This method neither relies on the content or on subjective metrics, such as the number of edits, nor on the number of bytes changed overall or per edit. We recognize that value can be brought by each editor, regardless of the frequency, or the length of her contributions \cite{}. Only the number and the expertise of editors bring value to an article \cite{wilkinson2007}.  And the expertise of editors can be measured from the number and the quality of articles they have modified at least once.
 
-For that, we consider a simple input, which is a representation of the bi-partite network of editors and their contributions to articles.  Namely, let us consider a matrix $M_{ea}$ of all editors having contributed to a Wikipedia category of articles. $M_{ea}$ takes value $1$ if editor $e$ has edited article $a$, and $0$ otherwise. Note that $M_{ea}$ only shows which editors have ever touched an article. We convert to a binary categorical input for this matrix because of the precedent set in \cite{kane2011,keegan2012,geiger2013}, which each seek to move beyond the importance of edit count, claiming it to be spurious data when imagining the graph of editors, or measuring editor experience. For the category {\it Feminist Writers}, as presented on Figure \ref{fig:triangle}, $M_{ea}$ exhibits a triangular structure in which editors (resp. articles) are sorted (max on the bottom-left corner) by the number of articles they have touched (resp. by the number of editors who have touched each article). $M_{ea}$ is the only input of the {\it bi-partite random walker} model described thereafter, for recursively characterizing the structure and the value of contributions in open collaboration, through the evaluation of editor expertise and article quality.
+For that, we consider a simple input, which is a representation of the bi-partite network of editors and their contributions to articles.  Namely, let us consider a matrix $M_{ea}$ of all editors having contributed to a Wikipedia category of articles. $M_{ea}$ takes value $1$ if editor $e$ has edited article $a$, and $0$ otherwise. Note that $M_{ea}$ only shows which editors have ever touched an article. We convert to a binary categorical input for this matrix because of the precedent set in \cite{kane2011,keegan2012,geiger2013}, which each seek to move beyond the importance of edit count, claiming it to be spurious data when imagining the graph of editors, or measuring editor experience. Later we compare our results using the raw edit counts instead of touch count, to corroborate this technique.
+
+For the category {\it Feminist Writers}, as presented on Figure \ref{fig:triangle}, $M_{ea}$ exhibits a triangular structure in which editors (resp. articles) are sorted (max on the bottom-left corner) by the number of articles they have touched (resp. by the number of editors who have touched each article). $M_{ea}$ is the only input of the {\it bi-partite random walker} model described thereafter, for recursively characterizing the structure and the value of contributions in open collaboration, through the evaluation of editor expertise and article quality.
 
 \begin{figure*}[!t]
 \centering
@@ -52,7 +55,7 @@ Although interpretation is difficult past the very first iteration steps, at eac
 %\end{equation}
 %
 % variable weights to the scores from the previous iteration
-can be modeled as a Markov process of random walkers on a bi-partite network, jumping with some probability from one node type to another node type \cite{caldarelli2012network}. A schematic representation of the random walk process on a bi-partite network is depicted in Figure \ref{fig:jumpers}. \textcolor{red}{The intuition is the following: a random walker jumps with some probability from an editor to a given article (i.e. the editor's expertise is positively influenced by the article's quality), and with another probability from an article to a given editor (i.e. the value of the article is positively by the editor's expertise)}. The binary matrix $M_{ea}$ determines whether a jump between each pair of nodes is possible. If two nodes $e$ and $a$ are not directly connected $M_{ea} = 0$, and the transition probability is 0. Conceptually, the {\it bi-partite network random walker} model is an extension of the single node type (i.e. Web pages) {\it Page Rank} Google search algorithm \cite{page1999pagerank,kleinberg1999} to two kind of nodes.
+can be modeled as a Markov process of random walkers on a bi-partite network, jumping with some probability from one node type to another node type \cite{caldarelli2012network}. A schematic representation of the random walk process on a bi-partite network is depicted in Figure \ref{fig:jumpers}.  \textcolor{red}{That is some very bad intuitition, at least say that we can tweak the attractiveness to jump to highly connected nodes}\textcolor{red}{The intuition is the following: a random walker jumps with some probability from an editor to a given article (i.e. the editor's expertise is positively influenced by the article's quality), and with another probability from an article to a given editor (i.e. the value of the article is positively by the editor's expertise)}. The binary matrix $M_{ea}$ determines whether a jump between each pair of nodes is possible. If two nodes $e$ and $a$ are not directly connected $M_{ea} = 0$, and the transition probability is 0. Conceptually, the {\it bi-partite network random walker} model is an extension of the single node type (i.e. Web pages) {\it Page Rank} Google search algorithm \cite{page1999pagerank,kleinberg1999} to two kind of nodes.
 
 \begin{figure}[!t]
 \centering
