final version resubmission

--- a/paper/additional.bib
+++ b/paper/additional.bib
@@ -18,7 +18,7 @@
 @article{vonkrogh2014designing,
 	author = {von Krogh, Georg and Maillart, Thomas and Haefliger, Stefan and Sornette, Didier},
 	title = {Designing Organizations for Productive Bursts},
-	journal = {under review},
+	journal = {in revision},
 	year = {2014}
 }
 
