--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -67,33 +67,33 @@ breaklinks=true,
 
 \title{The Virtuous Circle of Wikipedia\\ \vspace{0.3cm} {\LARGE \bf Recursive Measures of Collaboration Structures}\\ \vspace{0.3cm}}
 
-%\numberofauthors{1}
-%\author{[anonymized author names and affiliations]}
+\numberofauthors{1}
+\author{[anonymized author names and affiliations]}
 
 
-\numberofauthors{3}
-\author{
-\alignauthor
-Maximilian Klein\\
-       \affaddr{OCLC Research}\\
-       \affaddr{777 Mariners Island Blvd}\\
-       \affaddr{San Mateo, CA, 94404}\\
-       \email{kleinm@oclc.org}
-% 2st. author
-\alignauthor
-Thomas Maillart\\
-       \affaddr{School of Information}\\
-       \affaddr{ University of California, Berkeley, 102 South Hall}\\
-       \affaddr{Berkeley, CA 94720}\\
-       \email{thomas.maillart\\@ischool.berkeley.edu}
-% 3rd. author
-\alignauthor
-John Chuang\\
-       \affaddr{School of Information}\\
-       \affaddr{ University of California, Berkeley, 102 South Hall}\\
-       \affaddr{Berkeley, CA 94720}\\
-       \email{chuang\\@ischool.berkeley.edu}
-}
+%\numberofauthors{3}
+%\author{
+%\alignauthor
+%Maximilian Klein\\
+%       \affaddr{OCLC Research}\\
+%       \affaddr{777 Mariners Island Blvd}\\
+%       \affaddr{San Mateo, CA, 94404}\\
+%       \email{kleinm@oclc.org}
+%% 2st. author
+%\alignauthor
+%Thomas Maillart\\
+%       \affaddr{School of Information}\\
+%       \affaddr{ University of California, Berkeley, 102 South Hall}\\
+%       \affaddr{Berkeley, CA 94720}\\
+%       \email{thomas.maillart\\@ischool.berkeley.edu}
+%% 3rd. author
+%\alignauthor
+%John Chuang\\
+%       \affaddr{School of Information}\\
+%       \affaddr{ University of California, Berkeley, 102 South Hall}\\
+%       \affaddr{Berkeley, CA 94720}\\
+%       \email{chuang\\@ischool.berkeley.edu}
+%}
 
 % Teaser figure can go here
 %\teaser{
