--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -1,3 +1,110 @@
+@misc{stopczynski2014privacy,
+    abstract = {{In recent years, the amount of information collected about human beings has
+increased dramatically. This development has been partially driven by
+individuals posting and storing data about themselves and friends using online
+social networks or collecting their data for self-tracking purposes
+(quantified-self movement). Across the sciences, researchers conduct studies
+collecting data with an unprecedented resolution and scale. Using computational
+power combined with mathematical models, such rich datasets can be mined to
+infer underlying patterns, thereby providing insights into human nature. Much
+of the data collected is sensitive. It is private in the sense that most
+individuals would feel uncomfortable sharing their collected personal data
+publicly. For this reason, the need for solutions to ensure the privacy of the
+individuals generating data has grown alongside the data collection efforts.
+Out of all the massive data collection efforts, this paper focuses on efforts
+directly instrumenting human behavior, and notes that -- in many cases -- the
+privacy of participants is not sufficiently addressed. For example, study
+purposes are often not explicit, informed consent is ill-defined, and security
+and sharing protocols are only partially disclosed. This paper provides a
+survey of the work related to addressing privacy issues in research studies
+that collect detailed sensor data on human behavior. Reflections on the key
+problems and recommendations for future work are included. We hope the overview
+of the privacy-related practices in massive data collection studies can be used
+as a frame of reference for practitioners in the field. Although focused on
+data collection in an academic context, we believe that many of the challenges
+and solutions we identify are also relevant and useful for other domains where
+massive data collection takes place, including businesses and governments.}},
+    archivePrefix = {arXiv},
+    author = {Stopczynski, Arkadiusz and Pietri, Riccardo and Pentland, Alex and Lazer, David and Lehmann, Sune},
+    citeulike-article-id = {13120510},
+    citeulike-linkout-0 = {http://arxiv.org/abs/1403.5299},
+    citeulike-linkout-1 = {http://arxiv.org/pdf/1403.5299},
+    day = {20},
+    eprint = {1403.5299},
+    keywords = {big\_data, privacy, sensors},
+    month = mar,
+    posted-at = {2014-07-30 21:19:08},
+    priority = {2},
+    title = {{Privacy in Sensor-Driven Human Data Collection: A Guide for Practitioners}},
+    url = {http://arxiv.org/abs/1403.5299},
+    year = {2014}
+}
+
+@misc{Stopczynski2014,
+    abstract = {{Human brain activity collected in the form of Electroencephalography (EEG),
+even with low number of sensors, is an extremely rich signal. Traces collected
+from multiple channels and with high sampling rates capture many important
+aspects of participants' brain activity and can be used as a unique personal
+identifier. The motivation for sharing EEG signals is significant, as a mean to
+understand the relation between brain activity and well-being, or for
+communication with medical services. As the equipment for such data collection
+becomes more available and widely used, the opportunities for using the data
+are growing; at the same time however inherent privacy risks are mounting. The
+same raw EEG signal can be used for example to diagnose mental diseases, find
+traces of epilepsy, and decode personality traits. The current practice of the
+informed consent of the participants for the use of the data either prevents
+reuse of the raw signal or does not truly respect participants' right to
+privacy by reusing the same raw data for purposes much different than
+originally consented to. Here we propose an integration of a personal
+neuroinformatics system, Smartphone Brain Scanner, with a general privacy
+framework openPDS. We show how raw high-dimensionality data can be collected on
+a mobile device, uploaded to a server, and subsequently operated on and
+accessed by applications or researchers, without disclosing the raw signal.
+Those extracted features of the raw signal, called answers, are of
+significantly lower-dimensionality, and provide the full utility of the data in
+given context, without the risk of disclosing sensitive raw signal. Such
+architecture significantly mitigates a very serious privacy risk related to raw
+EEG recordings floating around and being used and reused for various purposes.}},
+    archivePrefix = {arXiv},
+    author = {Stopczynski, Arkadiusz and Greenwood, Dazza and Hansen, Lars K. and Pentland, Alex},
+    citeulike-article-id = {13301474},
+    citeulike-linkout-0 = {http://arxiv.org/abs/1403.2745},
+    citeulike-linkout-1 = {http://arxiv.org/pdf/1403.2745},
+    day = {11},
+    eprint = {1403.2745},
+    keywords = {neuro, privacy},
+    month = mar,
+    posted-at = {2014-07-30 21:11:07},
+    priority = {2},
+    title = {{Privacy for Personal Neuroinformatics}},
+    url = {http://arxiv.org/abs/1403.2745},
+    year = {2014}
+}
+
+@article{eisenhardt1989agencyTheory,
+    abstract = {{Agency theory is an important, yet controversial, theory. This paper reviews agency theory, its contributions to organization theory, and the extant empirical work and develops testable propositions. The conclusions are that agency theory (a) offers unique insight into information systems, outcome uncertainty, incentives, and risk and (b) is an empirically valid perspective, particularly when coupled with complementary perspectives. The principal recommendation is to incorporate an agency perspective in studies of the many problems having a cooperative structure.}},
+    author = {Eisenhardt, Kathleen M.},
+    citeulike-article-id = {13300535},
+    citeulike-linkout-0 = {http://dx.doi.org/10.5465/amr.1989.4279003},
+    citeulike-linkout-1 = {http://amr.aom.org/content/14/1/57.abstract},
+    citeulike-linkout-2 = {http://amr.aom.org/content/14/1/57.full.pdf},
+    day = {01},
+    doi = {10.5465/amr.1989.4279003},
+    issn = {1930-3807},
+    journal = {Academy of Management Review},
+    keywords = {agency\_dilemma},
+    month = jan,
+    number = {1},
+    pages = {57--74},
+    posted-at = {2014-07-30 03:43:35},
+    priority = {2},
+    publisher = {Academy of Management},
+    title = {{Agency Theory: An Assessment and Review}},
+    url = {http://dx.doi.org/10.5465/amr.1989.4279003},
+    volume = {14},
+    year = {1989}
+}
+
 @article{markus2001toward,
     abstract = {{This paper represents a step toward a theory of knowledge reusability with emphasis on knowledge management systems and repositories, often called organizational memory systems. Synthesis of evidence from a wide variety of sources suggests four distinct types of knowledge reuse situations according to the knowledge reuser and the purpose of knowledge reuse. The types involve shared work producers, who produce knowledge they later reuse; shared work practitioners, who reuse each other's knowledge contributions; expertise-seeking novices; and secondary knowledge miners. Each type of knowledge reuser has different requirements for knowledge repositories. Owing to how repositories are created, reusers'requirements often remain unmet. Repositories often require considerable rework to be useful for new reusers, but knowledge producers rarely have the resources and incentives to do a good job of repurposing knowledge. Solutions include careful use of incentives and human and technical intermediaries.}},
     author = {Markus, Lynne M.},
@@ -344,7 +451,7 @@
     doi = {10.1145/324133.324140},
     issn = {0004-5411},
     journal = {J. ACM},
-    keywords = {hips, pagerank},
+    keywords = {hits, pagerank},
     month = sep,
     number = {5},
     pages = {604--632},
@@ -1683,7 +1790,7 @@ may change the results of our first-order model.}},
     year = {2008}
 }
 
-@misc{sornette2014howmuch,
+@article{sornette2014howmuch,
     abstract = {In a variety of open source software projects, we document a superlinear
 growth of production (\$R \sim c^\beta\$) as a function of the number of active
 developers \$c\$, with \$\beta \simeq 4/3\$ with large dispersions. For a typical
@@ -1708,10 +1815,9 @@ have a smaller superlinearity and less variability.},
     citeulike-article-id = {13201088},
     citeulike-linkout-0 = {http://arxiv.org/abs/1405.4298},
     citeulike-linkout-1 = {http://arxiv.org/pdf/1405.4298},
-    day = {16},
     eprint = {1405.4298},
+    journal = {PloS ONE (forthcoming)},
     keywords = {critical\_cascades, open\_source, superlinear\_productivity},
-    month = may,
     posted-at = {2014-05-26 22:02:51},
     priority = {2},
     title = {{How Much is the Whole Really More than the Sum of its Parts? 1 + 1 = 2.5: Superlinear Productivity in Collective Group Actions}},
