--- a/paper/sections/intro.tex
+++ b/paper/sections/intro.tex
@@ -3,12 +3,10 @@ In online open collaboration, knowledge artifacts such as open source code files
 
 Despite ``bottom-up" self-organization, participants in open collaboration can collectively achieve  the production of high quality and often reliable knowledge, as demonstrated for instance for Wikipedia \cite{giles2005internet}. This new form of labor organization is called peer-production and it usually heavily relies on Internet communication systems to be effective \cite{benkler2002}. Peer-production is based on {\it task self-selection} and {\it peer-review} \cite{benkler2002}. As a result, participants decide to contribute according to their skills. In turn, skills are improved as they contribute more, and so on, following a virtuous circle.
 
-Because open collaboration enjoys a truly horizontal organization, the dynamics of contributions are contingent to the heterogenous motivations and incentives of participants \cite{vonKrogh2012}, and some knowledge artifacts enjoy various attention from the community over time, with time localized bursts for hot topics \cite{keegan2013hotoff}. These  highly non-linear, transient and intrinsically unpredictable bursts of iterative improvements are the hallmark of successfully organized communities \cite{vonkrogh2014designing}. They can be rationalized by critical cascades of both individual contributions and interactive community-based iterative improvements \cite{sornette2014howmuch}. 
+Because open collaboration enjoys a truly horizontal organization, the dynamics of contributions are contingent to the heterogenous motivations and incentives of participants \cite{vonKrogh2012}, and some knowledge artifacts enjoy various attention from the community, with time localized bursts for hot topics \cite{keegan2013hotoff}. These  highly non-linear, transient and intrinsically unpredictable bursts of iterative improvements are the hallmark of successfully organized communities \cite{vonkrogh2014designing}. They can be rationalized by critical cascades of both individual contributions and interactive community-based iterative improvements \cite{sornette2014howmuch}. {\it Individual} versus {\it interaction-based} mechanisms are hard to disentangle, and therefore, understanding the structure of collaboration remains a difficult challenge. For larger groups concentrating on precise problems (e.g., in open collaboration) interactions typically magnify coordination problems \cite{halfaker2013}. %Moreover, open collaboration projects unfold over large time scales of several years, sometime decades, and the lurking and learning-by-doing components play a crucial role in the engagement of contributors \cite{vonkrogh2003}. 
 
-{\it Individual} versus {\it interaction-based} improvement mechanisms are hard to disentangle, and the outcome of experiments on small groups in social psychology on group performance have shown mixed results \cite{shaw1932comparison}. Typical group sizes in open collaboration range from a few to several hundreds of contributors, which create coordination problems \cite{halfaker2013}. Moreover, open collaboration projects unfold over large time scales of several years, sometime decades, and the lurking and learning-by-doing components play a crucial role in the engagement of contributors \cite{vonkrogh2003}.
+To understand the origins of cooperation structures and quality in open collaboration, we posit that the value of each knowledge artifact (e.g. article, source code file) is deeply tied to the expertise and the number of its contributors, who can witness potential mistakes or outdated information. Conversely, the expertise of contributors is a function of artifacts contributed to, and so on, recursively.
 
-To understand the origins of cooperation structures and quality in open collaboration, we posit that the value of each knowledge artifact (e.g. article, source code file) is deeply tied to the expertise and the number of its contributors, as potential witnesses of potential mistakes or outdated information. Conversely, the expertise of contributors is a function of artifacts contributed to.  Hence, we recognize the {\it directed}, {\it bi-partite} and {\it recursive} nature of the interplay of value between artifacts and contributors \cite{kane2009}.
-
-To measure how artifacts benefit from a larger number of editors with a given expertise, and how editors benefit from having contributed to more artifacts of some quality, we propose a {\it bi-partite network random walker} algorithm, which a two-node type generalization of the pageRank algorithm \cite{page1999pagerank}. We calibrate the algorithm on 12 Wikipedia categories of articles, and we show, at the level of each category, how articles do (or do not) benefit from the intervention of more editors. 
+To measure how artifacts benefit from a larger number of editors with a given expertise, and how editors benefit from having contributed to more artifacts of some quality, we propose a {\it bi-partite network random walker} algorithm, which is a two-node type generalization of the recursive {\it pageRank} algorithm \cite{page1999pagerank,kleinberg1999}. We calibrate the algorithm on $12$ Wikipedia categories of articles, and we show, at the level of each category, how articles do (or do not) benefit from the intervention of more editors and their expertise.
 
 The rest of this paper is organized as follows. We first expose the reader to the large literature on Wikipedia measuring article quality, editor expertise and their mutual interplay. We then introduce the intuition behind the {\it bi-partite network random walker} algorithm, as well as its implementation for the present study. Data employed and the results are then presented and discussed. We finally present the limitations and future research directions.
