--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -6,9 +6,9 @@ The effort to measure article quality and editor expertise has extended to predi
 %\textcolor{red}{I think we can delete this paragraph, its off topic.}
 %In contrast, the difficulty to assess the quality of artifacts and the expertise of editors differs with the ease to make the same evaluation with software code which can be compiled and tested. In a Matlab experiment for solving NP-hard problems, it was found that work shared as a public good helps individuals quickly reuse existing results, and thus, find better algorithms \cite{gulley2010}. Source code submissions by individuals programmers were tested and benchmarked for their capacity to solve the assigned problem quickly, by executing the compiled code on a computer. Unfortunately, for the time being, this approach is exclusively feasible for machine executable knowledge (i.e. software code) and in highly controlled environments.
 
-We believe that the general skepticism about these metrics and reputation systems is grounded in their inability to capture and make sense of coordination between contributors. While coordination and cooperation are a general problem in societies \cite{ostrom1990}, CSCW researchers have been specifically concerned with the positive or negative effects of coordination and collaboration on produced output in open collaboration. In particular, Wikipedia has been a heavily explored ``field" of studies for social scientists, starting with concerns on the effects of peer-review and whether single or repeated contributions by editors would help improve the quality of articles \cite{hu2007articlequality,wilkinson2007}. While collaboration and additional review by peers is generally perceived as positive, depending on the type of tasks and their required coordination, performance can also be undermined by inadequate coordination \cite{kittur2009coordination}. On the contrary, the effects of diversity on group productivity seem to increase group productivity \cite{chen2010}. It was also found that editors cluster by interest, with higher coordinated efforts in densely populated clusters \cite{jesus2009}. 
+We believe that the general skepticism about these metrics and reputation systems is grounded in their inability to capture and make sense of coordination between contributors. Coordination defined as an on-going process that produces other measurable outcomes, is in general hard to understand in societies \cite{ostrom1990}. CSCW researchers have been specifically concerned with coordination viewed as a feature of a community - the effect of more peers on output quality. So while coordination process is always happening, by default we will talk of coordination as a feature, and say that a community is more coordinated if increased participation relates to higher quality. In particular, Wikipedia has been a heavily explored ``field" of studies for social scientists, starting with concerns on the effects of peer-review and whether single or repeated contributions by editors would help improve the quality of articles \cite{hu2007articlequality,wilkinson2007}. While collaboration and additional review by peers is generally perceived as positive, depending on the type of tasks and their required coordination, performance can also be undermined by inadequate coordination processes \cite{kittur2009coordination} which would lead to a negative coordination feature. On the contrary, the effects of diversity on group productivity seem to increase group productivity \cite{chen2010}. It was also found that editors cluster by interest, with higher coordinated efforts in densely populated clusters \cite{jesus2009}. 
 
-The specific problem of coordination in ``featured" articles, which are heavily contributed over short time periods, has raised concerns on implicit versus explicit coordination and the limited positive effect it can bring when editors are too numerous \cite{kittur2008}. 
+As a hybrid example, the specific problem of coordination in ``featured" articles, which are heavily contributed over short time periods, has raised concerns on implicit versus explicit coordination processes and the limited positive quality it can bring when editors are too numerous \cite{kittur2008}.
  
 The connection between article quality and editor expertise is present in nearly all literature aiming to understand the effects of coordination on the value of Wikipedia articles. The typical structure of networks with edges that connect uniquely two kinds of nodes is called {\it bi-partite} \cite{newman2001}. The analysis of patterns in Wikipedia bi-partite networks confirmed the existence of overlapping cliques of densely connected articles and editors  \cite{jesus2009}. A more detailed analysis of medical and health-related articles on Wikipedia, showed that the position of articles in the bi-partite network of articles and editors significantly influenced its quality \cite{kane2009}. 
 
@@ -25,6 +25,4 @@ Recent developments in the science of bi-partite networks has shown the feasibil
 %\textcolor{red}{count of articles by editors show also the ``span" of knowledge or skills. Our model doesn't account for editors who have topic specific skills, rather than wiki-formatting skills.}
 
 %Recent results show that the contribution dynamics of successful open source projects, stem from critical cascades of iterative improvements (commits), which in turn lead to super-linear {\it productive bursts} of contributions \cite{sornette2014howmuch}.  The conditions of emergence of productive bursts, include transparency, self-censored clans, emergent technology, problem front-loading, distributed screening, and modularity \cite{vonkrogh2014designing}. 
-
-
 
