added funding changed ref structure

--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -1,4 +1,4 @@
-\documentclass{sigchi}
+	\documentclass{sigchi}
 
 % Use this command to override the default ACM copyright statement (e.g. for preprints). 
 % Consult the conference website for the camera-ready copyright statement.
@@ -67,33 +67,33 @@ breaklinks=true,
 
 \title{The Virtuous Circle of Wikipedia\\ \vspace{0.3cm} {\LARGE \bf Recursive Measures of Collaboration Structures}\\ \vspace{0.3cm}}
 
-\numberofauthors{1}
-\author{[anonymized author names and affiliations]}
+%\numberofauthors{1}
+%\author{[anonymized author names and affiliations]}
 
 
-%\numberofauthors{3}
-%\author{
-%\alignauthor
-%Maximilian Klein\\
-%       \affaddr{OCLC Research}\\
-%       \affaddr{777 Mariners Island Blvd}\\
-%       \affaddr{San Mateo, CA, 94404}\\
-%       \email{kleinm@oclc.org}
-%% 2st. author
-%\alignauthor
-%Thomas Maillart\\
-%       \affaddr{School of Information}\\
-%       \affaddr{ University of California, Berkeley, 102 South Hall}\\
-%       \affaddr{Berkeley, CA 94720}\\
-%       \email{thomas.maillart\\@ischool.berkeley.edu}
-%% 3rd. author
-%\alignauthor
-%John Chuang\\
-%       \affaddr{School of Information}\\
-%       \affaddr{ University of California, Berkeley, 102 South Hall}\\
-%       \affaddr{Berkeley, CA 94720}\\
-%       \email{chuang\\@ischool.berkeley.edu}
-%}
+\numberofauthors{3}
+\author{
+\alignauthor
+Maximilian Klein\\
+       \affaddr{OCLC Research}\\
+       \affaddr{777 Mariners Island Blvd}\\
+       \affaddr{San Mateo, CA, 94404}\\
+       \email{kleinm@oclc.org}
+% 2nd. author
+\alignauthor
+Thomas Maillart\\
+       \affaddr{School of Information}\\
+       \affaddr{ University of California, Berkeley, 102 South Hall}\\
+       \affaddr{Berkeley, CA 94720}\\
+       \email{thomas.maillart\\@ischool.berkeley.edu}
+% 3rd. author
+\alignauthor
+John Chuang\\
+       \affaddr{School of Information}\\
+       \affaddr{ University of California, Berkeley, 102 South Hall}\\
+       \affaddr{Berkeley, CA 94720}\\
+       \email{chuang\\@ischool.berkeley.edu}
+}
 
 % Teaser figure can go here
 %\teaser{
@@ -179,8 +179,8 @@ breaklinks=true,
 %successful, both in being accepted into the Conference, and in
 %influencing the work of our field.
 
-%\section{Acknowledgments}
-%One of the authors (T.M.) acknowledges support from the Swiss National Science Foundation (Grant Nr.  PA00P2-145368).
+\section{Acknowledgments}
+This research was supported in part by the National Science Foundation under award CCF-0424422 (TRUST).
 
 % Balancing columns in a ref list is a bit of a pain because you
 % either use a hack like flushend or balance, or manually insert
@@ -208,5 +208,5 @@ breaklinks=true,
 % uncomment the following line:
 % \small
 \bibliographystyle{acm-sigchi}
-\bibliography{../tmaillart.bib,../additional.bib}
+\bibliography{../tmaillart.bib}
 \end{document}
