--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -2477,7 +2477,8 @@ industry, and government.}},
     priority = {2},
     publisher = {Stanford InfoLab},
     title = {{The PageRank citation ranking: Bringing order to the web.}},
-    year = {1999}
+    year = {1999},
+    journal = {Technical Report}
 }
 
 @article{stanley2002,
@@ -17825,5 +17826,29 @@ pragmatic.}},
     title = {{Open Source Software Development as a Special Type of Academic Research}},
     volume = {4},
     year = {1999}
+}
+
+@misc{klein,
+    author = {Klein, Maximilian},
+    publisher = {Unpublished},
+    title = {{Kumusha Takes Wiki: Actionable Metrics for Uganda and C\^{o}te d'Ivoire}},
+    year = {2014},
+    url = {http://notconfusing.com/kumusha-takes-wiki-actionable-metrics-for-uganda-and-cote-divoire/}
+}
+
+@inproceedings{burke2008taking,
+  title={Taking up the mop: identifying future wikipedia administrators},
+  author={Burke, Moira and Kraut, Robert},
+  booktitle={CHI'08 extended abstracts on Human factors in computing systems},
+  pages={3441--3446},
+  year={2008},
+  organization={ACM}
+}
+
+@article{vonkrogh2014designing,
+	author = {von Krogh, Georg and Maillart, Thomas and Haefliger, Stefan and Sornette, Didier},
+	title = {Designing Organizations for Productive Bursts},
+	journal = {in revision},
+	year = {2014}
 }
 
