tightening up the references

--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -207,6 +207,9 @@ This research was supported in part by the National Science Foundation under awa
 % If you want to use smaller typesetting for the reference list,
 % uncomment the following line:
 % \small
-\bibliographystyle{acm-sigchi}
-\bibliography{../tmaillart.bib}
+
+%% to generate the bib
+%\bibliographystyle{acm-sigchi}
+%\bibliography{../tmaillart.bib}
+\input{cscw2015_tight.bbl}
 \end{document}
