--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -207,6 +207,9 @@ breaklinks=true,
 % If you want to use smaller typesetting for the reference list,
 % uncomment the following line:
 % \small
-\bibliographystyle{acm-sigchi}
-\bibliography{../tmaillart.bib,../additional.bib}
+%\bibliographystyle{acm-sigchi}
+%\bibliography{../tmaillart.bib,../additional.bib}
+
+\input{formattedBib.tex}
+
 \end{document}
