final camera-ready version, as submitted

--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -85,7 +85,7 @@ Thomas Maillart\\
        \affaddr{School of Information}\\
        \affaddr{ University of California, Berkeley, 102 South Hall}\\
        \affaddr{Berkeley, CA 94720}\\
-       \email{thomas.maillart\\@ischool.berkeley.edu}
+       \email{maillart\\@ischool.berkeley.edu}
 % 3rd. author
 \alignauthor
 John Chuang\\
@@ -108,9 +108,9 @@ John Chuang\\
 \input{../sections/abstract.tex}
 
 %\textcolor{red}{The following section is mandatory for accepted papers, but not needed for submissions for the June 1 deadline.}
-\keywords{{\bf open collaboration, bi-partite networks, performance, coordination}}
+\keywords{{\bf open collaboration; bi-partite networks; performance; coordination}}
 
-%\category{H.5.m.}{Information Interfaces and Presentation (e.g. HCI)}{Miscellaneous}
+\category{H.5.3}{[Information Systems]: Group and Organization Interfaces}{computer-supported collaborative work}
 
 %See: \url{http://www.acm.org/about/class/1998/}
 %for more information and the full list of ACM classifiers
@@ -180,7 +180,7 @@ John Chuang\\
 %influencing the work of our field.
 
 \section{Acknowledgments}
-This research was supported in part by the National Science Foundation under award CCF-0424422 (TRUST).
+This research was supported in part by the National Science Foundation under award CCF-0424422 (TRUST). One of the authors (T.M.) acknowledges support by the Swiss National Science Foundation (Grant Nr.  PA00P2-145368).
 
 % Balancing columns in a ref list is a bit of a pain because you
 % either use a hack like flushend or balance, or manually insert
