--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -1,18 +1,18 @@
 \section{Discussion}
-To understand how the structure of collaboration influences article quality, we have applied and tested the {\it bi-partite network random walker} model in the context of Wikipedia. Our results show that the model accounts well for the quality of articles  $\langle \rho_a \rangle  \approx 0.64$ and for the expertise of contributors $\langle \rho_e \rangle  \approx 0.72$, and overall exhibits a high degree of fitness. Moreover, $\rho_a$ remains stable over time, while $\rho_e$ increases, suggesting that the model better reflects editor expertise as more contributions to a broader set of articles occur, i.e., when the bi-partite network gets more densely connected. This suggests that loosely connected entities, either articles and editors, cannot be ranked accurately. From Figure \ref{fig:triangle} and from Table \ref{tab:statistics}, we see that there are always significantly more editors than articles for each category. Hence, the probability for an article to get contributions early on is higher than the probability to find editors who have contributed to a lot of articles early. 
+To understand how the structure of collaboration influences article quality, we have applied and tested the {\it bi-partite network random walker} model for a variety of categories in Wikipedia. Our results show that the model accounts well for the quality of articles  $\langle \rho_a \rangle  \approx 0.64$ and for the expertise of contributors $\langle \rho_e \rangle  \approx 0.72$, and overall exhibits a high degree of fitness. Moreover, $\rho_a$ remains stable over time, while $\rho_e$ increases, suggesting that the model better reflects editor expertise as more contributions to a broader set of articles occur, i.e., when the bi-partite network gets more densely connected. This suggests that loosely connected entities, either articles and editors, cannot be ranked accurately. From Figure \ref{fig:triangle} and from Table \ref{tab:statistics}, we see that there are always significantly more editors than articles for each category. Hence, the probability for an article to get contributions early on is higher than the probability to find editors who have contributed to a lot of articles early. 
 
-To account for single-minded editors who have concentrated on only one or few articles, we have tested the{\it bi-partite random walker} model with a different input, namely the matrix of edit counts (instead of a binary matrix). As shown on Figure \ref{fig:binary_vs_editcount}, the model using the {\it edit counts} input matrix accounts nearly as well for article quality, while it does a much worse job ranking editor expertise compared to a {\it binary} input matrix. Counterintuitively, we observe a ``less is more" situation: the number of articles ever touched by an editor better relfects the structure of collaboration and value creation,  compared to edit counts, a much richer information input. Also, the labor-hour ground truth metric for editors is more a proxy of number of edits rather the number of articles ever touched \cite{geiger2013}. Nevertheless, the model does not perform as well with {\it edit counts} as an input. This suggests that what really counts for assessing the expertise of an editor is the number of articles touched, rather than the number of edits per article.
+To account for single-minded editors who have concentrated on only one or few articles, we have tested the {\it bi-partite random walker} model with a different input, namely the matrix of edit counts (instead of a binary matrix). As shown on Figure \ref{fig:binary_vs_editcount}, the model using the {\it edit counts} input matrix accounts nearly as well for article quality, while it does a much worse job ranking editor expertise compared to a {\it binary} input matrix. Counter-intuitively, we observe a {\it less is more} situation: the number of articles ever touched by an editor better reflects the structure of collaboration and value creation, compared to edit counts, a much richer information input. Also, the labor-hour ground truth metric for editors is more a proxy of number of edits rather the number of articles ever touched \cite{geiger2013}. Nevertheless, the model does not perform as well with {\it edit counts} as an input. This suggests that what really counts for assessing the expertise of an editor is the number of articles touched, rather than the number of edits per article.
 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=0.9\columnwidth]{../Figures/bin_comp.png}.
+\includegraphics[width=0.9\columnwidth]{../Figures/bin_comp.png}
 \caption{Comparison between $\rho_a$ (upper panel) and $\rho_e$ (lower panel) for two input matrices: binary (black) and edit counts (blue) for each category numbered according to Table \ref{tab:maxbeta}. While taking edit counts as the input matrix only marginally increases $\rho_a$, it drastically reduces $\rho_e$.}
 \label{fig:binary_vs_editcount}
 \end{figure}
 
 We now discuss how the fitted parameters $\alpha^{*}$ and $\beta^{*}$ inform on the structures of collaboration in Wikipedia categories. On the one hand, we have found $\alpha^{*} \approx 0$ for all categories, reflecting the positive influence of the number of articles edited on editor expertise. This result is compatible with previous results by Keegan et al. \cite{keegan2012}. On the other hand, $\beta^{*}$ varies across categories with values ranging from $0$ to $1.52$ at the last snapshot. $\beta$ can be considered as a measure of the collaboration structure: the smaller $\beta$, the more articles benefit from more editors. On the contrary, the larger $\beta$, the more articles benefit from less editors. If we consider for instance {\it Sexual acts}, a category that could be considered taboo or perverse with articles being the least collaboratively edited: $\beta > 1$ reflects that an editor with edits to many articles will see her ranking drop. Indeed, it should not be taken for granted that contributions are necessarily positive. Because of their socially-sensitive nature, articles about sexual acts are particularly prone to attracting vandals or edit-warring behaviors across the whole category. Therefore, editors making the most edits are not necessarily the ones improving article quality, as we would typically expect. This result is again compatible with previous research, which has shown that, in some circumstances, most active editors exhibit deleting behaviors that lower metric-based article quality ratings \cite{kane2011}. 
 
-Conversely, the category {\it Military History of the US} is famous for its self-organized task-forces. At the latest snapshot $\beta = 0$, it is the one of only a few categories we have analyzed, which exhibits $\beta$ consistently negative over time. Accordingly, the marginal quality of articles is positively influenced by the number of editors touching the article. Unsurprisingly, {\it Military History of the US} is literally a ``WikiProject" with a hierarchy of coordinators, an active IRC channel, and a mailing list. As a result of better coordination, there is less edit-warring and more efficient contributions: editors edit articles with well-defined task at hand. 
+Conversely, the category {\it Military History of the US} is famous for its self-organized task-forces. At the latest snapshot $\beta = 0$, it is the one of only a few categories we have analyzed, which exhibits $\beta$ consistently negative over time. Accordingly, the marginal quality of articles is positively influenced by the number of editors touching the article. Unsurprisingly, {\it Military History of the US} is literally a {\it WikiProject} with a hierarchy of coordinators, an active IRC channel, and a mailing list. As a result of better coordination, there is less edit-warring and more efficient contributions: editors edit articles with well-defined task at hand. 
 
 
 %It requires a frictionless, collaborative environment where the more you edit, the more and more experienced you become. It's also worth noting that \cite{keegan2012}, found that ``coordination demands influence the tendency of editors with similar levels of experience to work together". \textcolor{red}{In our scenario that would mean that the coordination present attracts super-users to work in the productive environment. The category Military History is empirically a standout case of collaboration, and shows in its calibrated $\beta$ measurements. }
