--- a/paper/sections/data.tex
+++ b/paper/sections/data.tex
@@ -1,7 +1,8 @@
+\clearpage
 \section{Data}
-We seek to calibrate the bi-partite random walker model with empirical data. For that, we aim to find values of $\alpha$ and $\beta$, which minimize the distance between rankings, of both article quality and editor expertise, given on the one hand by the model and on the other hand by ground truth metrics obtained independently. We perform the model calibration for 13 snapshots (see Figure \ref{fig:snapshots})  for each of  the 12 categories of Wikipedia articles presented in Table \nolinebreak \ref{tab:statistics}. To account as much as possible for collaboration structures, we have selected a spectrum of categories ranging from anarchy and edit-warring (e.g., {\it Sexual Acts}) to acknowledged high organization level (e.g., {\it Military history of the US}).
+To uncover the coordination features of Wikipedia categories, we seek to calibrate the bi-partite random walker model with empirical data. For that, we aim to find values of $\alpha$ and $\beta$, which minimize the distance between rankings, of both article quality and editor expertise, given by the model on the one hand, and on the other hand, by ground truth metrics obtained independently. We performed the model calibration for 13 snapshots (see Figure \ref{fig:snapshots})  for each of  the 12 categories of Wikipedia articles presented in Table \nolinebreak \ref{tab:statistics}. To account as much as possible for collaboration structures, we have selected a spectrum of categories ranging from anarchy and edit-warring (e.g., {\it Sexual Acts}) to acknowledged high organization level (e.g., {\it Military history of the US}).
 
-For each category and snapshot we build the binary matrix $M_{ea}$ by parsing all edit histories of all articles in the main namespace up to the snapshot time. We set $M_{ea} = 1$ for editor $e$ having modified article $a$, and $M_{ea} = 0$ otherwise. We considered only editors who made 5 or more edits to any article in the category. We also discarded all software robots (i.e. {\it bots}) that programmatically edit Wikipedia. 
+For each category and snapshot we have built the binary matrix $M_{ea}$ by parsing all edit histories of all articles in the main namespace up to the snapshot time. We set $M_{ea} = 1$ for editor $e$ having modified article $a$, and $M_{ea} = 0$ otherwise. We considered only editors who made 5 or more edits to any article in the category. We also discarded all software robots (i.e., {\it bots}) that programmatically edit Wikipedia. 
 
 \begin{table}
 \begin{tabular}{|l|c|c|c|}
@@ -49,11 +50,11 @@ To calibrate $\alpha$ and $\beta$, we resorted to state-of-the-art ground truth 
 
 The set $(\alpha^*,\beta^*)$ characterizes how the structure of collaboration creates values in each Wikipedia category. To calibrate the model, we have used ground truth metrics for article quality and editor expertise. 
 
-A variety of techniques for measuring article quality have been proposed, from a collection of word-count related metrics \cite{blumenstock2008sizematters} to analyzing persistent and transient contributions throughout revisions\cite{woehner2009}. We have selected metrics used on Wikipedia \cite{wang2013tell,klein} which have also been used in the CSCW literature in different combinations \cite{kane2011,keegan2012}. Our measure of actual article quality is a combination of 5 text analysis metrics: (i) ratio of mark-up to readable text, (ii) number of headings, (iii) article length, (iv) citations per article length, (v) number of outgoing intra-Wiki links. We performed principal component analysis (PCA) for each category and snapshot in order to reduce dimensionality from 5 metrics to a single one (i.e. the principal component). The variance explained by the principal component varied between 0.5 and 0.72, confirming the dominance of the axis of maximum variance. Even though these five article quality metrics do not directly incorporate information from the bi-partite network (e.g. number of contributors, number of edits), they might indirectly be related, as some editors specialize in some types of editing, such as adding citations or systematically improving the structure of articles.
+A variety of techniques for measuring article quality have been proposed, from a collection of word-count related metrics \cite{blumenstock2008sizematters} to analyzing persistent and transient contributions throughout revisions \cite{woehner2009}. We have selected metrics used on Wikipedia \cite{wang2013tell,klein} which have also been used in the CSCW literature in different combinations \cite{kane2011,keegan2012}. Our measure of actual article quality is a combination of 5 text analysis metrics: (i) ratio of mark-up to readable text, (ii) number of headings, (iii) article length, (iv) citations per article length, (v) number of outgoing intra-Wiki links. We performed principal component analysis (PCA) for each category and snapshot in order to reduce dimensionality from 5 metrics to a single one (i.e., the principal component). The variance explained by the principal component varied between 0.5 and 0.72, confirming the dominance of the axis of maximum variance. Even though these five article quality metrics do not directly incorporate information from the bi-partite network (e.g. number of contributors, number of edits), they might indirectly be related, as some editors specialize in some types of editing, such as adding citations or systematically improving the structure of articles.
 
 Editor expertise is even more difficult to address. As each article is a blend of edits by several contributors, disentangling the value of individual contributions remains a challenge, which has occupied Wikipedia researchers long before us. Techniques ranging from parsing the revision history to measuring text survival rate \cite{adler2008measuringauthor} have been used. Although they are sophisticated, these metrics pose a variety of problems. For instance, some articles are likely to evolve not only because former editors introduced wrong statements, but simply because of new information brought to public attention. 
 
-We decided to use ``labor hours" proposed by Geiger and Halfaker \cite{geiger2013}, which is calculated for each editor by taking contribution history up to the snapshot point. All edits made within $1$ hour of a previous edit are counted as one {\it edit session}. If more than one hour separates two edits, a new period of edits  starts. The expertise expressed in labor hours is the sum of edit sessions. For the calculation of ground truth expertise, we only consider edits for a given category, although the same editor might have simultaneously  edited other categories of Wikipedia. This metric purposefully does not tell how this time is spent in the number (resp. size) of edits actually made during a period, or whether the effort has been spent on one or multiple articles. In other words, we do not distinguish a single minded user spending $100$ hours on a single article trying to get it to ``Feature Article status" from a user making $100$ stub articles for $1$ hour each.  However, it is clear that a highly contributing editor has more chance to touch more articles over time, but the metric does not distinguish if editors had a dispersed contribution or concentrated on a single article. 
+We decided to use the {\it labor hours} metric proposed by Geiger and Halfaker \cite{geiger2013}, which is calculated for each editor by taking contribution history up to the snapshot point. All edits made within $1$ hour of a previous edit are counted as one {\it edit session}. If more than one hour separates two edits, a new period of edits  starts. The expertise expressed in labor hours is the sum of edit sessions. For the calculation of ground truth expertise, we only consider edits for a given category, although the same editor might have simultaneously  edited other categories of Wikipedia. This metric purposefully does not tell how this time is spent in the number (resp. size) of edits actually made during a period, or whether the effort has been spent on one or multiple articles. In other words, we do not distinguish a single minded user spending $100$ hours on a single article trying to get it to ``feature article status" from a user making $100$ stub articles for $1$ hour each.  However, it is clear that a highly contributing editor has more chance to touch more articles over time, but the metric does not distinguish if editors had a dispersed contribution or concentrated on a single article. 
 
 How this effort is distributed and brings quality is precisely what the {\it bi-partite random walker} model can say that other metrics cannot. In a nutshell, parameters $\alpha$ and $\beta$ describe the most likely structure of collaboration given calibration of the model to ground truth quality and expertise metrics. The higher the correlation between the model and the exogenous metrics, the better the collaboration structure is captured by the model. 
 
