--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -1,9 +1,9 @@
 \section{Results}
-To understand how contributions by editors to articles shape the structure of collaboration in Wikipedia, we have performed a calibration of the bi-partite network random walker model on 12 Wikipedia categories (c.f. Table \ref{tab:statistics}) with 13 snapshots each (Figure \ref{fig:snapshots}). For each category and snapshot, we found the set of parameters $(\alpha^*,\beta^*)$, which maximize the fitness of the model to ground truth metrics of article quality and editor expertise. Figure \ref{fig:landscape} shows typical optimization landscapes, which maximize the rank correlation $\rho_e$ (upper panel) between editor expertise $w_{e}$ obtained from the model and expertise obtained from ground truth measures $\bar{w}_e$. The same is done for rank correlation $\rho_a$ between $w_a$ and $\bar{w}_a$ (lower panel). 
+To understand how contributions by editors to articles shape the structure of collaboration in Wikipedia, we have performed a calibration of the bi-partite network random walker model on 12 Wikipedia categories (c.f., Table \ref{tab:statistics}) with 13 snapshots each (Figure \ref{fig:snapshots}). For each category and snapshot, we found the set of parameters $(\alpha^*,\beta^*)$, which maximize the fitness of the model to ground truth metrics of article quality and editor expertise. Figure \ref{fig:landscape} shows typical optimization landscapes, which maximize the rank correlation $\rho_e$ (upper panel) between editor expertise $w_{e}$ obtained from the model and expertise obtained from ground truth measures $\bar{w}_e$. The same is done for rank correlation $\rho_a$ between $w_a$ and $\bar{w}_a$ (lower panel). 
 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=0.9\columnwidth]{../Figures/contour_fem_combined.png}.
+\includegraphics[width=0.9\columnwidth]{../Figures/contour_fem_combined.png}
 \caption{Typical landscape of maximum correlation as a function of $\alpha$ and $\beta$ for articles (upper panel) and editors (lower panel). The contour line shows the 95\textsuperscript{th} percentile of the rank correlation over the landscape. The category displayed here is {\it Feminist Writers}, for the last snapshot ending February 2014.}
 \label{fig:landscape}
 \end{figure}
@@ -12,9 +12,9 @@ The maximum achievable rank-correlation with ground truth expertise and quality 
 
 %The question remains if the intersection of the solution spaces for $\rho_a$ and $\rho_e$ is nonempty. That is whether the we can find values of $\alpha$ and $\beta$ for which our editor ranking and article ranking are simultaneously optimized. We exploit two empirical facts from our data: the clear solution for article rankings that $alpha = 0$, and that for editor rankings the 95\textsuperscript{th} percentile maximizing boundary always includes values at $\alpha = 0$. Therefore, with $\alpha = 0$, we solve for $\beta$ in the editor ranking that maximizes $\rho_e$ - and thus $\rho_a$ simultaneously. 
 
-For the latest snapshot (i.e. the state of contributions in February 2014), we find that the best possible $\alpha^*$ is $0$ in all circumstances, while $\beta^*$ varies considerably across categories. Table \ref{tab:maxbeta} shows the categories ordered by $\beta^*$ (and $\alpha^*=0$ for the sake of completeness), as well as the corresponding maximum rank correlations $\rho_e$ and $\rho_a$. Since there is no single optimal value for $(\alpha^*,\beta^*)$, but rather a space of optimal values for  $\rho_e$ and $\rho_a$ separately, we have searched for a set of values that jointly maximizes both $\rho_e$ and $\rho_a$. The optimal parameter $\alpha^* = 0$ means that editor expertise always benefits from contributions as a linear function of the number of articles edited [compounded over iterations of the recursive algorithm defined by formula (\ref{random_walker})].  However, $\beta^*$ exhibits a continuum of values between $0$ ({\it Bicycle parts} and {\it US Military History}) and $1.52$ ({\it Sexual Acts}). $\beta$ controls the influence of the number of editors on the quality of a given article. When $\beta \approx 0$, the quality of articles increases as a linear function of the number of editors who have modified them. For $\beta \gg 0$, the marginal gain of having more editors for a given article decreases. So, in that case, when the number of editors touching an article increases, the marginal quality improvement decreases.
+For the latest snapshot (i.e., the state of contributions in February 2014), we find that the best possible $\alpha^*$ is $0$ in all circumstances, while $\beta^*$ varies considerably across categories. Table \ref{tab:maxbeta} shows the categories ordered by $\beta^*$ (and $\alpha^*=0$ for the sake of completeness), as well as the corresponding maximum rank correlations $\rho_e$ and $\rho_a$. Since there is no single optimal value for $(\alpha^*,\beta^*)$, but rather a space of optimal values for  $\rho_e$ and $\rho_a$ separately, we have searched for a set of values that jointly maximizes both $\rho_e$ and $\rho_a$. The optimal parameter $\alpha^* = 0$ means that editor expertise always benefits from contributions as a linear function of the number of articles edited [compounded over iterations of the recursive algorithm defined by formula (\ref{random_walker})].  However, $\beta^*$ exhibits a continuum of values between $0$ ({\it Bicycle parts} and {\it US Military History}) and $1.52$ ({\it Sexual Acts}). $\beta$ controls the influence of the number of editors on the quality of a given article. When $\beta \approx 0$, the quality of articles increases as a linear function of the number of editors who have modified them. For $\beta \gg 0$, the marginal gain of having more editors for a given article decreases. So, in that case, when the number of editors touching an article increases, the marginal quality improvement decreases.
 
-The evolution of $\beta^{*}$ over snapshots as shown on Figure \ref{fig:rhotime} exhibits large variations for early snapshots corresponding to the early 10\% of overall contributions per category (i.e. the 4\textsuperscript{th} snapshot). While $\beta^{*}$ exhibits a tendency to more stability afterwards, large variations within the range $0$ to $1.5$ can be observed for some categories, suggesting that organization and coordination level changes can occur as categories develop. 
+The evolution of $\beta^{*}$ over snapshots as shown on Figure \ref{fig:rhotime} exhibits large variations for early snapshots corresponding to the early 10\% of overall contributions per category (i.e., the 4\textsuperscript{th} snapshot). While $\beta^{*}$ exhibits a tendency to more stability afterwards, large variations within the range $0$ to $1.5$ can be observed for some categories, suggesting that organization and coordination level changes can occur as categories develop. 
 
 %In fact, $\beta$ switches signs only 3 times of the possible 144 measured changes. Although there are not enough $\beta < 0$ to draw a firm conclusion, it is interesting to note that instances of $\beta < 0$ happened in early category history, hence suggesting that the early contributions steps pull more value from the community. 
 %The stability of $(\alpha^*,\beta^*)$ confirms that the control parameters of the bi-partite network random walker model describe a robust feature of the structure of value creation in the bi-partite network of editors contributing to articles. This additional result is also a first step towards robust predictions of editor expertise and article quality rankings, given successive inputs to new articles made by editors.
@@ -58,8 +58,8 @@ The evolution of $\beta^{*}$ over snapshots as shown on Figure \ref{fig:rhotime}
 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=0.9\columnwidth]{../Figures/rho_combined_with_beta.eps}.
-\caption{Evolution of Spearman $\rho$ rank correlations between the ranking obtained from the calibrated model and the actual values for each category and for editors (upper panel)  and articles (middle panel). Corresponding $\beta^{*}$ values are also shown for interest (lower panel). The correlations are generally quite high : $ 0.46 < \rho_e < 0.75$ with $\langle \rho_e\rangle = 0.64$ for editors and $0.57 < \rho_a < 0.91$ with $\langle \rho_a\rangle = 0.72$. $\rho_{a}$  is stable over time, which means that the quality of articles can be well captured early on by the model. However, $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e. lots of edits) to capture well the expertise of editors.}
+\includegraphics[width=0.9\columnwidth]{../Figures/rho_combined_with_beta.eps}
+\caption{Evolution of Spearman $\rho$ rank correlations between the ranking obtained from the calibrated model and the actual values for each category and for editors (upper panel)  and articles (middle panel). Corresponding $\beta^{*}$ values are also shown for interest (lower panel). The correlations are generally quite high : $ 0.46 < \rho_e < 0.75$ with $\langle \rho_e\rangle = 0.64$ for editors and $0.57 < \rho_a < 0.91$ with $\langle \rho_a\rangle = 0.72$. $\rho_{a}$  is stable over time, which means that the quality of articles can be well captured early on by the model. However, $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e., lots of edits) to capture well the expertise of editors.}
 \label{fig:rhotime}
 
 
